--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Installing surge
       run: npm install -g surge
     - name: deploying  on surge
-      run: surge ./build http://shoeapp.surge.sh --token ${{secrets.SECRET_TOKEN}}
+      run: surge ./build http://quuenrace.surge.sh --token ${{secrets.SECRET_TOKEN}}
    
 
 
